edit admin js